refactored the renderer to be more modularized, removed variables and timeline class

--- a/CC-Electron/src/renderer/index.html
+++ b/CC-Electron/src/renderer/index.html
@@ -17,7 +17,7 @@
             </div>
 
             <div class="video-preview-label-ctr">
-                <span class="video-preview-label video-preview-game-label"></span>
+                <span class="video-preview-label video-preview-program-label"></span>
                 <span class="video-preview-label video-preview-age-label"></span>
             </div>
 
@@ -123,7 +123,7 @@
     
                 <div id="label-ctr-current-recording" class="">
                     <span id="time-label-current-recording" class="current-recording-label"></span>
-                    <span id="game-label-current-recording" class="current-recording-label"></span>
+                    <span id="program-label-current-recording" class="current-recording-label"></span>
                 </div>
                 
                 <button id="bar-btn-record" class="nav-bar-btn">
@@ -169,7 +169,7 @@
                             </div>
 
                             <div class="directory-bar">
-                                <select class="directory-setting-field" name="capturesGameFilter">
+                                <select class="directory-setting-field" name="capturesProgramFilter">
                                     <option value="All">All</option>
                                 </select>
 
@@ -223,7 +223,7 @@
                             </div>
 
                             <div class="directory-bar">
-                                <select class="directory-setting-field" name="clipsGameFilter">
+                                <select class="directory-setting-field" name="clipsProgramFilter">
                                     <option value="All">All</option>
                                 </select>
 
@@ -266,7 +266,7 @@
             </section>
 
             <section id="section-editor" class="content-section">
-                <h2 id="game-label-editor" class="content-label1">Editor</h2>
+                <h2 id="program-label-editor" class="content-label1">Editor</h2>
 
                 <hr class="content-divider1">
 
@@ -668,7 +668,7 @@
                                 </label>
                             </div>
 
-                            <p class="general-setting-description">Automatically record when gameplay is detected.</p>
+                            <p class="general-setting-description">Automatically record when program is running.</p>
                         </div>
 
                         <div class="general-setting-ctr">
