fixed issue with parsing css values, added a loading icon overlay

--- a/CC-Electron/src/renderer/index.html
+++ b/CC-Electron/src/renderer/index.html
@@ -59,7 +59,7 @@
         </div>
     </template>
 
-    <div id="overlay-initialization" class="active">
+    <div id="overlay-initialization" class="">
         <svg id="icon-initialization">
             <use href="../assets/svg/capcha.svg#capcha"></use>
         </svg>
@@ -95,6 +95,23 @@
         <div id="overlay-confirmation">
             <div id="ctr-confirmation">
                 <p id="label-confirmation"></p>
+
+                <svg id="loading-icon-confirmation" xmlns="http://www.w3.org/2000/svg" viewBox="-100 -100 200 200">
+                    <path id="primary-path-confirmation" d="M-50 -50 Q 20 -50 0 0 Q 42.3205081 -33.3012702 -18.3012702 -68.3012702Z" />
+                    <path id="secondary-path-confirmation" d="M-50 -50 Q 20 -50 0 0 Q 42.3205081 -33.3012702 -18.3012702 -68.3012702Z" />
+                    <path id="tertiary-path-confirmation" d="M-50 -50 Q 20 -50 0 0 Q 42.3205081 -33.3012702 -18.3012702 -68.3012702Z" />
+                    <path id="fourth-path-confirmation" d="M-50 -50 Q 20 -50 0 0 Q 42.3205081 -33.3012702 -18.3012702 -68.3012702Z" />
+                    <path id="fifth-path-confirmation" d="M-50 -50 Q 20 -50 0 0 Q 42.3205081 -33.3012702 -18.3012702 -68.3012702Z" />
+                    <path id="sixth-path-confirmation" d="M-50 -50 Q 20 -50 0 0 Q 42.3205081 -33.3012702 -18.3012702 -68.3012702Z" />
+                    <path id="seventh-path-confirmation" d="M-50 -50 Q 20 -50 0 0 Q 42.3205081 -33.3012702 -18.3012702 -68.3012702Z" />
+                    <path id="eighth-path-confirmation" d="M-50 -50 Q 20 -50 0 0 Q 42.3205081 -33.3012702 -18.3012702 -68.3012702Z" />
+                    <path id="ninth-path-confirmation" d="M-50 -50 Q 20 -50 0 0 Q 42.3205081 -33.3012702 -18.3012702 -68.3012702Z" />
+                    <path id="tenth-path-confirmation" d="M-50 -50 Q 20 -50 0 0 Q 42.3205081 -33.3012702 -18.3012702 -68.3012702Z" />
+                    <path id="eleventh-path-confirmation" d="M-50 -50 Q 20 -50 0 0 Q 42.3205081 -33.3012702 -18.3012702 -68.3012702Z" />
+                    <path id="twelfth-path-confirmation" d="M-50 -50 Q 20 -50 0 0 Q 42.3205081 -33.3012702 -18.3012702 -68.3012702Z" />
+
+                    <circle id="thirteenth-path-confirmation" cx="0" cy="0" r="35" />
+                </svg>
 
                 <div id="field-ctr-confirmation">
                     <input id="name-field-confirmation" class="confirmation-field" type="text">
