fixed error checking and resolving code, added loading screens

--- a/CC-Electron/src/renderer/index.html
+++ b/CC-Electron/src/renderer/index.html
@@ -891,7 +891,7 @@
                             </div>
                         </div>
 
-                        <div class="general-setting-group-ctr">
+                        <!-- <div class="general-setting-group-ctr">
                             <div class="general-setting-ctr">
                                 <h4 class="general-setting-label">Webcam</h4>
 
@@ -906,7 +906,7 @@
                                     </select>
                                 </div>
                             </div>
-                        </div>
+                        </div> -->
                     </div>
                 </div>
             </section>
