fixed app icon scaling, title bar icons, added web socket port selection and authentication

--- a/CC-Electron/src/renderer/index.html
+++ b/CC-Electron/src/renderer/index.html
@@ -59,7 +59,7 @@
         </div>
     </template>
 
-    <div id="overlay-initialization" class="active">
+    <div id="overlay-initialization" class="">
         <svg id="icon-initialization">
             <use href="../assets/svg/capcha.svg#capcha"></use>
         </svg>
@@ -74,19 +74,19 @@
 
         <button id="bar-btn-minimize" class="title-bar-btn">
             <svg class="title-bar-icon">
-                <use href="../assets/svg/window-minimize-solid.svg#window-minimize-solid"></use>
+                <use href="../assets/svg/horizontal-rule-600.svg#horizontal-rule-600"></use>
             </svg>
         </button>
 
         <button id="bar-btn-maximize" class="title-bar-btn">
-            <svg class="title-bar-icon">
-                <use href="../assets/svg/expand-solid.svg#expand-solid"></use>
+            <svg id="bar-icon-maximize" class="title-bar-icon">
+                <use href="../assets/svg/filter-none-600.svg#filter-none-600"></use>
             </svg>
         </button>
 
         <button id="bar-btn-close" class="title-bar-btn">
             <svg class="title-bar-icon">
-                <use href="../assets/svg/xmark-solid.svg#xmark-solid"></use>
+                <use href="../assets/svg/close-600.svg#close-600"></use>
             </svg>
         </button>
     </div>
