updated .gitignore and paths

--- a/src/renderer/index.html
+++ b/src/renderer/index.html
@@ -59,7 +59,7 @@
         </div>
     </template>
 
-    <div id="overlay-initialization" class="">
+    <div id="overlay-initialization" class="active">
         <svg id="icon-initialization">
             <use href="../assets/svg/capcha.svg#capcha"></use>
         </svg>
