--- a/src/renderer/index.html
+++ b/src/renderer/index.html
@@ -25,6 +25,16 @@
 
             <div class="video-preview-btn-ctr">
                 <button class="video-preview-btn video-preview-rename-btn">
+                    <!-- 
+                    SVG modified from original @ https://github.com/google/material-design-icons:
+                        Width attribute removed
+                        Height attribute removed
+                        Fill attribute removed
+                        ID attribute added
+                        Class attributes added
+                        Path elements split into components
+                    Licensed under Apache 2.0 @ https://www.apache.org/licenses/LICENSE-2.0
+                    -->
                     <svg class="video-preview-icon video-preview-rename-icon" xmlns="http://www.w3.org/2000/svg" viewBox="0 -960 960 960">
                         <path class="video-preview-path video-preview-first-path" d="M192.31-160q-13.73 0-23.02-9.29T160-192.31v-41.61q0-13.27 5.23-25.29t13.92-20.71l508.08-508.62q6.15-5.48 13.57-8.47 7.43-2.99 15.49-2.99t15.62 2.54q7.55 2.54 13.94 9.15l42.69 42.93q6.61 6.38 9.04 14 2.42 7.63 2.42 15.25 0 8.13-2.74 15.56-2.74 7.42-8.72 13.57L279.92-179.15q-8.69 8.69-20.71 13.92-12.02 5.23-25.29 5.23h-41.61Z"/>
                         <path class="video-preview-path video-preview-second-path" d="M200-200h43.92l427.93-427.92-43.93-43.93L200-243.92V-200Z"/>
@@ -33,6 +43,16 @@
                 </button>
 
                 <button class="video-preview-btn video-preview-delete-btn">
+                    <!-- 
+                    SVG modified from original @ https://github.com/google/material-design-icons:
+                        Width attribute removed
+                        Height attribute removed
+                        Fill attribute removed
+                        ID attribute added
+                        Class attributes added
+                        Path elements split into components
+                    Licensed under Apache 2.0 @ https://www.apache.org/licenses/LICENSE-2.0
+                    -->
                     <svg class="video-preview-icon video-preview-delete-icon" xmlns="http://www.w3.org/2000/svg" viewBox="0 -960 960 960">
                         <path class="video-preview-path video-preview-first-path" d="M304.62-160q-26.66 0-45.64-18.98T240-224.62V-720h-20q-8.5 0-14.25-5.76T200-740.03q0-8.51 5.75-14.24T220-760h140q0-12.38 9.19-21.58 9.19-9.19 21.58-9.19h178.46q12.39 0 21.58 9.19Q600-772.38 600-760h140q8.5 0 14.25 5.76t5.75 14.27q0 8.51-5.75 14.24T740-720h-20v495.38q0 26.66-18.98 45.64T655.38-160H304.62Z"/>
                         <path class="video-preview-path video-preview-second-path" d="M680-720H280v495.38q0 10.77 6.92 17.7 6.93 6.92 17.7 6.92h350.76q10.77 0 17.7-6.92 6.92-6.93 6.92-17.7V-720Z"/>
@@ -46,6 +66,16 @@
     <template id="template-general-setting-tile">
         <div class="general-setting-tile">
             <button class="general-setting-delete-btn">
+                <!-- 
+                SVG modified from original @ https://github.com/google/material-design-icons:
+                    Width attribute removed
+                    Height attribute removed
+                    Fill attribute removed
+                    ID attribute added
+                    Class attributes added
+                    Path elements split into components
+                Licensed under Apache 2.0 @ https://www.apache.org/licenses/LICENSE-2.0
+                -->
                 <svg class="general-setting-delete-icon" xmlns="http://www.w3.org/2000/svg" viewBox="0 -960 960 960">
                     <path class="general-setting-path general-setting-first-path" d="m480.13 -120q-74.67 0-140.41-28.34-65.73-28.34-114.36-76.92-48.63-48.58-76.99-114.26Q120-405.19 120-479.87q0-74.67 28.34-140.41 28.34-65.73 76.92-114.36 48.58-48.63 114.26-76.99Q405.19-840 479.87-840q74.67 0 140.41 28.34 65.73 28.34 114.36 76.92 48.63 48.58 76.99 114.26Q840-554.81 840-480.13q0 74.67-28.34 140.41-28.34 65.73-76.92 114.36-48.58 48.63-114.26 76.99Q554.81-120 480.13-120Z"/>
                     <path class="general-setting-path general-setting-second-path" d="m480-160q134 0 227-93t93-227q0-134-93-227t-227-93q-134 0-227 93t-93 227q0 134 93 227t227 93Z"/>                 
@@ -130,6 +160,16 @@
 
                 <div id="strip-nav">
                     <button id="bar-btn-directories" class="nav-bar-btn active">
+                        <!-- 
+                        SVG modified from original @ https://github.com/google/material-design-icons:
+                            Width attribute removed
+                            Height attribute removed
+                            Fill attribute removed
+                            ID attribute added
+                            Class attributes added
+                            Path elements split into components
+                        Licensed under Apache 2.0 @ https://www.apache.org/licenses/LICENSE-2.0
+                        -->
                         <svg id="bar-icon-directories" class="nav-bar-icon" xmlns="http://www.w3.org/2000/svg" viewBox="0 -960 960 960">
                             <path class="nav-bar-path nav-first-bar-path" d="M184.62-200q-27.62 0-46.12-18.5Q120-237 120-264.62v-430.76q0-27.62 18.5-46.12Q157-760 184.62-760H357q12.92 0 25.12 5.23 12.19 5.23 20.88 13.92L463.85-680h311.53q27.62 0 46.12 18.5Q840-643 840-615.38v350.76q0 27.62-18.5 46.12Q803-200 775.38-200H184.62Z"/>
                             <path class="nav-bar-path nav-second-bar-path" d="m184.62-240h590.76q10.77 0 17.7-6.92 6.92-6.93 6.92-17.7v-350.76q0-10.77-6.92-17.7-6.93-6.92-17.7-6.92H447.77l-73.08-73.08q-3.84-3.84-8.07-5.38-4.24-1.54-8.85-1.54H184.62q-10.77 0-17.7 6.92-6.92 6.93-6.92 17.7v430.76q0 10.77 6.92 17.7 6.93 6.92 17.7 6.92ZM160-240v-480 480Z"/>
@@ -139,6 +179,16 @@
                     </button>
         
                     <button id="bar-btn-settings" class="nav-bar-btn">
+                        <!-- 
+                        SVG modified from original @ https://github.com/google/material-design-icons:
+                            Width attribute removed
+                            Height attribute removed
+                            Fill attribute removed
+                            ID attribute added
+                            Class attributes added
+                            Path elements split into components
+                        Licensed under Apache 2.0 @ https://www.apache.org/licenses/LICENSE-2.0
+                        -->
                         <svg id="bar-icon-settings" class="nav-bar-icon" xmlns="http://www.w3.org/2000/svg" viewBox="0 -960 960 960">
                             <path class="nav-bar-path nav-first-bar-path" d="M438.38-120q-13.92 0-24.19-9.15-10.27-9.16-12.73-22.85l-10.54-83.69q-19.15-5.77-41.42-18.16-22.27-12.38-37.88-26.53L235-247.46q-12.69 5.61-25.77 1.23-13.08-4.39-20.15-16.62l-43.16-74.3q-7.07-12.23-4.15-25.54 2.92-13.31 13.92-21.85l66.85-50q-1.77-10.84-2.92-22.34-1.16-11.5-1.16-22.35 0-10.08 1.16-21.19 1.15-11.12 2.92-25.04l-66.85-50q-11-8.54-13.54-22.23-2.53-13.69 4.54-25.93l42.39-72q7.07-11.46 20.15-16.23 13.08-4.77 25.77.85l75.85 32.15q17.92-14.92 38.77-26.92 20.84-12 40.53-18.54L401.46-808q2.46-13.69 12.73-22.85 10.27-9.15 24.19-9.15h83.24q13.92 0 24.19 9.15 10.27 9.16 12.73 22.85l10.54 84.46q23 8.08 40.65 18.54 17.65 10.46 36.35 26.15L725.77-711q12.69-5.62 25.77-.85 13.08 4.77 20.15 16.23l42.39 72.77q7.07 12.23 4.15 25.54-2.92 13.31-13.92 21.85l-69.93 52.31q3.31 12.38 3.7 22.73.38 10.34.38 20.42 0 9.31-.77 19.65-.77 10.35-3.54 25.04l67.62 50.77q11 8.54 14.31 21.85 3.3 13.31-3.77 25.54l-42.62 73.53q-7.07 12.24-20.54 16.62-13.46 4.38-26.15-1.23l-76.92-32.92q-18.7 15.69-37.62 26.92-18.92 11.23-39.38 17.77L558.54-152q-2.46 13.69-12.73 22.85-10.27 9.15-24.19 9.15h-83.24Z"/>
                             <path class="nav-bar-path nav-second-bar-path" d="m440-160h78.23L533-268.31q30.23-8 54.42-21.96 24.2-13.96 49.27-38.27L736.46-286l39.77-68-87.54-65.77q5-17.08 6.62-31.42 1.61-14.35 1.61-28.81 0-15.23-1.61-28.81-1.62-13.57-6.62-29.88L777.77-606 738-674l-102.08 42.77q-18.15-19.92-47.73-37.35-29.57-17.42-55.96-23.11L520-800h-79.77l-12.46 107.54q-30.23 6.46-55.58 20.81-25.34 14.34-50.42 39.42L222-674l-39.77 68L269-541.23q-5 13.46-7 29.23t-2 32.77q0 15.23 2 30.23t6.23 29.23l-86 65.77L222-286l99-42q23.54 23.77 48.88 38.12 25.35 14.34 57.12 22.34L440-160Z"/>
@@ -154,6 +204,16 @@
                     </div>
                     
                     <button id="bar-btn-record" class="nav-bar-btn">
+                        <!-- 
+                        SVG modified from original @ https://github.com/google/material-design-icons:
+                            Width attribute removed
+                            Height attribute removed
+                            Fill attribute removed
+                            ID attribute added
+                            Class attributes added
+                            Path elements split into components
+                        Licensed under Apache 2.0 @ https://www.apache.org/licenses/LICENSE-2.0
+                        -->
                         <svg id="bar-icon-record" class="nav-bar-icon" xmlns="http://www.w3.org/2000/svg" viewBox="0 -960 960 960">
                             <path id="first-bar-path-record" class="nav-bar-path nav-first-bar-path" d="m480.13 -120q-74.67 0-140.41-28.34-65.73-28.34-114.36-76.92-48.63-48.58-76.99-114.26Q120-405.19 120-479.87q0-74.67 28.34-140.41 28.34-65.73 76.92-114.36 48.58-48.63 114.26-76.99Q405.19-840 479.87-840q74.67 0 140.41 28.34 65.73 28.34 114.36 76.92 48.63 48.58 76.99 114.26Q840-554.81 840-480.13q0 74.67-28.34 140.41-28.34 65.73-76.92 114.36-48.58 48.63-114.26 76.99Q554.81-120 480.13-120Z"/>																																									 
                             <path id="second-bar-path-record" class="nav-bar-path nav-second-bar-path" d="m480-160q134 0 227-93t93-227q0-134-93-227t-227-93q-134 0-227 93t-93 227q0 134 93 227t227 93Zm0-320Z"/>
@@ -444,6 +504,16 @@
                             </div>
 
                             <button id="bar-btn-view" class="clip-bar-btn">
+                                <!-- 
+                                SVG modified from original @ https://github.com/google/material-design-icons:
+                                    Width attribute removed
+                                    Height attribute removed
+                                    Fill attribute removed
+                                    ID attribute added
+                                    Class attributes added
+                                    Path elements split into components
+                                Licensed under Apache 2.0 @ https://www.apache.org/licenses/LICENSE-2.0
+                                -->
                                 <svg id="bar-icon-view" class="clip-bar-icon" xmlns="http://www.w3.org/2000/svg" viewBox="0 -960 960 960">
                                     <path class="clip-bar-path clip-first-bar-path" d="m480 -240q-118.62 0-217.58-62.77-98.96-62.77-159.88-164.61-5-8.24-7.12-16.24-2.11-8-2.11-16.42 0-8.42 2.11-16.38 2.12-7.96 7.12-16.2 60.92-101.84 159.88-164.61Q361.38-760 480-760q118.62 0 217.58 62.77 98.96 62.77 159.88 164.61 5 8.24 7.12 16.24 2.11 8 2.11 16.42 0 8.42-2.11 16.38-2.12 7.96-7.12 16.2-60.92 101.84-159.88 164.61Q598.62-240 480-240Z"/>																											 
                                     <path class="clip-bar-path clip-second-bar-path" d="m480-500Zm0 220q113 0 207.5-59.5T832-500q-50-101-144.5-160.5T480-720q-113 0-207.5 59.5T128-500q50 101 144.5 160.5T480-280Z"/>
@@ -455,6 +525,16 @@
                             </button>
 
                             <button id="bar-btn-create" class="clip-bar-btn">
+                                <!-- 
+                                SVG modified from original @ https://github.com/google/material-design-icons:
+                                    Width attribute removed
+                                    Height attribute removed
+                                    Fill attribute removed
+                                    ID attribute added
+                                    Class attributes added
+                                    Path elements split into components
+                                Licensed under Apache 2.0 @ https://www.apache.org/licenses/LICENSE-2.0
+                                -->
                                 <svg id="bar-icon-create" class="clip-bar-icon" xmlns="http://www.w3.org/2000/svg" viewBox="0 -960 960 960">
                                     <path class="clip-bar-path clip-first-bar-path" d="M224.62-160q-27.62 0-46.12-18.5Q160-197 160-224.62v-510.76q0-27.62 18.5-46.12Q197-800 224.62-800h411.61q12.92 0 25.12 5.23 12.19 5.23 20.88 13.92l98.62 98.62q8.69 8.69 13.92 20.88 5.23 12.2 5.23 25.12v411.61q0 27.62-18.5 46.12Q763-160 735.38-160H224.62Z"/>
                                     <path class="clip-bar-path clip-second-bar-path" d="M760-646 646-760H224.62q-10.77 0-17.7 6.92-6.92 6.93-6.92 17.7v510.76q0 10.77 6.92 17.7 6.93 6.92 17.7 6.92h510.76q10.77 0 17.7-6.92 6.92-6.93 6.92-17.7V-646Z"/>
