--- a/src/renderer/index.html
+++ b/src/renderer/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
     <script type="module" src="renderer.js"></script>
-    <link rel="shortcut icon" href="../assets/app-icon/icon.png" type="image/x-icon">
+    <link rel="shortcut icon" href="../assets/icon/icon.ico" type="image/x-icon">
     <title>CapCha</title>
 </head>
 <body>
